<resources>
    <string name="app_name">Cuzdanim&amp;Hesabim</string>
    <string name="splas_name">Cüzdanım \n &amp;\n Hesabım</string>

    <string name="loginSlogan">Merhaba, \nHoş Geldiniz</string>
    <string name="loginGiris">Giriş yapmak için devam ediniz</string>
    <string name="loginKullaniciAdi">Kullanıcı Adı</string>
    <string name="LoginSifre">Şifre</string>
    <string name="LoginSifremiUnuttum">Şifremi Unuttum</string>
    <string name="LoginGirisYap">Giriş</string>
    <string name="loginYeniKullanici">Yeni Kullanıcı? Kayıt Ol</string>

    <string name="signupMerhaba">Merhaba,</string>
    <string name="signupOnSoz">Hesabınızı tutmak için kayıt olun</string>
    <string name="signupAdSoyad">Ad - Soyad</string>
    <string name="signupKullaniciAdi">Kullanıcı Adı</string>
    <string name="signupEmail">E-Mail</string>
    <string name="signupKayitOl">Kayıt Ol</string>
    <string name="signupHesabimVar">Zaten bir hesabın var mı? Giriş</string>

    <string name="profileGuncelleme">Güncelleme</string>

    <string name="onBoardBasla">Başla</string>
    <string name="onBoardSkip">Geç</string>

    <string name="onBoardSayfaBirBaslik">Başlık - 1</string>
    <string name="onBoardSayfaIkiBaslik">Başlık - 2</string>
    <string name="onBoardSayfaUcBaslik">Başlık - 3</string>
    <string name="onBoardSayfaDortBaslik">Başlık - 4</string>

    <string name="onBoardSayfaBirAciklama">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lectus massa, accumsan eu odio vitae, faucibus malesuada urna. Duis vel diam diam. Suspendisse potenti. Nulla eu pulvinar nisl. In hac habitasse platea dictumst. Vestibulum vestibulum consectetur fermentum. Nunc imperdiet blandit efficitur. Nulla dapibus blandit urna, ut feugiat felis maximus at. Nunc ut neque sit amet orci aliquet consequat quis a tellus. In tortor enim, viverra eu vehicula sit amet, imperdiet nec neque.</string>
    <string name="onBoardSayfaIkiAciklama">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lectus massa, accumsan eu odio vitae, faucibus malesuada urna. Duis vel diam diam. Suspendisse potenti. Nulla eu pulvinar nisl. In hac habitasse platea dictumst. Vestibulum vestibulum consectetur fermentum. Nunc imperdiet blandit efficitur. Nulla dapibus blandit urna, ut feugiat felis maximus at. Nunc ut neque sit amet orci aliquet consequat quis a tellus. In tortor enim, viverra eu vehicula sit amet, imperdiet nec neque.</string>
    <string name="onBoardSayfaUcAciklama">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lectus massa, accumsan eu odio vitae, faucibus malesuada urna. Duis vel diam diam. Suspendisse potenti. Nulla eu pulvinar nisl. In hac habitasse platea dictumst. Vestibulum vestibulum consectetur fermentum. Nunc imperdiet blandit efficitur. Nulla dapibus blandit urna, ut feugiat felis maximus at. Nunc ut neque sit amet orci aliquet consequat quis a tellus. In tortor enim, viverra eu vehicula sit amet, imperdiet nec neque.</string>
    <string name="onBoardSayfaDortAciklama">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lectus massa, accumsan eu odio vitae, faucibus malesuada urna. Duis vel diam diam. Suspendisse potenti. Nulla eu pulvinar nisl. In hac habitasse platea dictumst. Vestibulum vestibulum consectetur fermentum. Nunc imperdiet blandit efficitur. Nulla dapibus blandit urna, ut feugiat felis maximus at. Nunc ut neque sit amet orci aliquet consequat quis a tellus. In tortor enim, viverra eu vehicula sit amet, imperdiet nec neque.</string>

    <string name="shortcutsGelir">Gelir</string>
    <string name="shortcutsGider">Gider</string>

    <string name="menuHeaderSlogan">Cebinizdeki Akrep Olmaya Geldik</string>
    <string name="menuHeaderAppName">Cüzdanım</string>


</resources>
